k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-service
spec:
  selector:
    app: platform-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
